// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/ResourceManager/AddFile Exemple 1 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 612,
    }
  }
>
  <form
    data-test="AddFile"
    onSubmit={[Function]}
  >
    <div
      className="fr-upload-group ds-fr--Ajouter un ou plusieurs fichier(s)"
    >
      <label
        className="fr-label"
        htmlFor="file-upload"
      >
        Ajouter un ou plusieurs fichier(s)
        <span
          className="fr-hint-text"
        >
          Taille maximale par fichier : 20 Mo.  Formats supportés : pdf, doc, docx, odt, ods, xls, xlsx, ppt, pptx, jpeg, jpg, png.
        </span>
      </label>
      <input
        aria-describedby="Taille maximale par fichier : 20 Mo.  Formats supportés : pdf, doc, docx, odt, ods, xls, xlsx, ppt, pptx, jpeg, jpg, png."
        className="fr-upload"
        multiple={true}
        onChange={[Function]}
        type="file"
      />
      
    </div>
    <div
      className="pt-2"
      data-test="FileItems"
    >
      <div
        className="pb-4"
      >
        <div
          className="py-1 mr-4 group flex flex-col hover:bg-grey925"
          data-test="file-failed"
        >
          <div
            className="px-2 pt-1 flex justify-between"
          >
            <div
              className="flex w-11/12"
            >
              <div
                className="text-sm whitespace-nowrap text-ellipsis overflow-hidden"
                data-test="name"
              >
                Rapport d’activités 2019-2020 et rapport DD 2020 nom vraiment trop long.doc
              </div>
              <div
                className="text-sm min-w-max text-grey625 pl-2"
                data-test="size"
              >
                (
                60 Mo
                )
              </div>
            </div>
            <button
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
              onClick={[Function]}
            />
          </div>
          <div
            className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
            data-test="error"
          >
             
            Ce fichier ne peut pas être téléversé car il dépasse la taille maximale autorisée
          </div>
        </div>
        <div
          className="py-1 mr-4 group flex flex-col hover:bg-grey925"
          data-test="file-failed"
        >
          <div
            className="px-2 pt-1 flex justify-between"
          >
            <div
              className="flex w-11/12"
            >
              <div
                className="text-sm whitespace-nowrap text-ellipsis overflow-hidden"
                data-test="name"
              >
                Logo-comcom.SVG
              </div>
              <div
                className="text-sm min-w-max text-grey625 pl-2"
                data-test="size"
              >
                (
                15 Mo
                )
              </div>
            </div>
            <button
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
              onClick={[Function]}
            />
          </div>
          <div
            className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
            data-test="error"
          >
             
            Ce fichier ne peut pas être téléversé car son format n’est pas supporté
          </div>
        </div>
        <div
          className="py-1 mr-4 group flex flex-col hover:bg-grey925"
          data-test="file-failed"
        >
          <div
            className="px-2 pt-1 flex justify-between"
          >
            <div
              className="flex w-11/12"
            >
              <div
                className="text-sm whitespace-nowrap text-ellipsis overflow-hidden"
                data-test="name"
              >
                mauvais format et taille.exe
              </div>
              <div
                className="text-sm min-w-max text-grey625 pl-2"
                data-test="size"
              >
                (
                80 Mo
                )
              </div>
            </div>
            <button
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
              onClick={[Function]}
            />
          </div>
          <div
            className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
            data-test="error"
          >
             
            Ce fichier ne peut pas être téléversé car son format n’est pas supporté et il dépasse la taille maximale autorisée
          </div>
        </div>
      </div>
    </div>
    <button
      className="fr-btn mt-2"
      disabled={true}
      type="submit"
    >
      Ajouter
    </button>
  </form>
</div>
`;

exports[`Storyshots ui/shared/preuves/AddPreuveModal/AddFile Exemple 1 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 612,
    }
  }
>
  <form
    data-test="AddFile"
    onSubmit={[Function]}
  >
    <div
      className="fr-upload-group ds-fr--Ajouter un ou plusieurs fichier(s)"
    >
      <label
        className="fr-label"
        htmlFor="file-upload"
      >
        Ajouter un ou plusieurs fichier(s)
        <span
          className="fr-hint-text"
        >
          Taille maximale par fichier : 20 Mo.  Formats supportés : pdf, doc, docx, odt, ods, xls, xlsx, ppt, pptx, jpeg, jpg, png.
        </span>
      </label>
      <input
        aria-describedby="Taille maximale par fichier : 20 Mo.  Formats supportés : pdf, doc, docx, odt, ods, xls, xlsx, ppt, pptx, jpeg, jpg, png."
        className="fr-upload"
        multiple={true}
        onChange={[Function]}
        type="file"
      />
      
    </div>
    <div
      className="pt-2 overflow-y-auto max-h-[220px]"
      data-test="FileItems"
    >
      <div
        className="pb-4"
      >
        <div
          className="py-1 mr-4 group flex flex-col hover:bg-grey925"
          data-test="file-failed"
        >
          <div
            className="px-2 pt-1 flex justify-between"
          >
            <div
              className="flex w-11/12"
            >
              <div
                className="text-sm whitespace-nowrap overflow-ellipsis overflow-hidden"
                data-test="name"
              >
                Rapport d’activités 2019-2020 et rapport DD 2020 nom vraiment trop long.doc
              </div>
              <div
                className="text-sm min-w-max text-grey625 pl-2"
                data-test="size"
              >
                (
                60 Mo
                )
              </div>
            </div>
            <button
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
              onClick={[Function]}
            />
          </div>
          <div
            className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
            data-test="error"
          >
             
            Ce fichier ne peut pas être téléversé car il dépasse la taille maximale autorisée
          </div>
        </div>
        <div
          className="py-1 mr-4 group flex flex-col hover:bg-grey925"
          data-test="file-failed"
        >
          <div
            className="px-2 pt-1 flex justify-between"
          >
            <div
              className="flex w-11/12"
            >
              <div
                className="text-sm whitespace-nowrap overflow-ellipsis overflow-hidden"
                data-test="name"
              >
                Logo-comcom.SVG
              </div>
              <div
                className="text-sm min-w-max text-grey625 pl-2"
                data-test="size"
              >
                (
                15 Mo
                )
              </div>
            </div>
            <button
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
              onClick={[Function]}
            />
          </div>
          <div
            className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
            data-test="error"
          >
             
            Ce fichier ne peut pas être téléversé car son format n’est pas supporté
          </div>
        </div>
        <div
          className="py-1 mr-4 group flex flex-col hover:bg-grey925"
          data-test="file-failed"
        >
          <div
            className="px-2 pt-1 flex justify-between"
          >
            <div
              className="flex w-11/12"
            >
              <div
                className="text-sm whitespace-nowrap overflow-ellipsis overflow-hidden"
                data-test="name"
              >
                mauvais format et taille.exe
              </div>
              <div
                className="text-sm min-w-max text-grey625 pl-2"
                data-test="size"
              >
                (
                80 Mo
                )
              </div>
            </div>
            <button
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
              onClick={[Function]}
            />
          </div>
          <div
            className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
            data-test="error"
          >
             
            Ce fichier ne peut pas être téléversé car son format n’est pas supporté et il dépasse la taille maximale autorisée
          </div>
        </div>
      </div>
    </div>
    <button
      className="fr-btn mt-2"
      disabled={true}
      type="submit"
    >
      Ajouter
    </button>
  </form>
</div>
`;
